fin primer etapa angular

--- a/src/app/componentes/footer/footer.component.css
+++ b/src/app/componentes/footer/footer.component.css
@@ -8,4 +8,5 @@ Seccion Footer
   background-color: rgba(255, 255, 255, 0.15);
   color: rgb(161, 138, 138);
   padding:10px;
+  border-radius: 15%;
 }
