--- a/src/app/componentes/nab-var/nab-var.component.html
+++ b/src/app/componentes/nab-var/nab-var.component.html
@@ -1,11 +1,21 @@
 <div id="menuppal">
   <nav class="navbar navbar-expand-lg  fixed-top navbarScroll navbar-dark" >
+      <!-- LOGO -->
+      <div class="Logo">
+        <img src="../../../assets/img/Logo-ArgP.png">
+          <div class="texto">
+              <p>Argentina</p>
+              <p>Programa</p>
+          </div>
+    </div><!--fin logo-->
+
+
         <div class="container-fluid">
-         <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+         <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerMenu" aria-controls="navbarTogglerMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon" ></span>
 
       </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <div class="collapse navbar-collapse" id="navbarTogglerMenu">
             <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
                     <a class="nav-link active"routerLink= "''">Home</a>
@@ -26,6 +36,7 @@
                     <a class="nav-link" href="#" >Login</a>
                   </li>
             </ul>
+
       </div>
     </div>
   </nav>
@@ -35,5 +46,5 @@
 <!--banner-->
 
 
-      
+
 
