--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -33,7 +33,7 @@
                       </div>
               </div>
               <div class="col-lg-3 pt-4 pt-lg-0 content"  >
-                  <img src="/img/LogoMutual_redondo.png" class="img-fluid" alt="">
+                  <img src="../../../assets/img/LogoMutual_redondo.png" class="img-fluid" alt="">
 
               </div>
       </div>
