--- a/src/styles.css
+++ b/src/styles.css
@@ -29,17 +29,12 @@ h2, h3, h4, h5, h6 {
 
 
 /*--------------------------------------------------------------
-# Secciones General
+# componentes General
 --------------------------------------------------------------*/
-/* display background color black on navbar scroll */
-.navbarScroll.navbarDark {
-  background-color:#040404;
-}
 
-/* Espaciado de las secciones */
 #about, #estudios, #experiencia, #contacto, #login {
-  margin-top: 120px;
-  padding-top: 120px;
+  margin-top: 170px;
+  padding-top: 60px;
   width: 100%;
   overflow-y: hidden;
   background-color: #040404;
@@ -66,13 +61,14 @@ h2, h3, h4, h5, h6 {
 }
 
 
+
 /*----------------------------------------
     Logo
 ------------------------------------------*/
 .Logo{
   position:relative;
-  margin-top: 0px;
-  margin-left: 3px;
+  margin-top: 3px;
+  margin-left: 50px;
   width: 95px;
   height: 78px;
   border-radius:8px;
@@ -177,6 +173,8 @@ barra de navegacion menu
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
 }
+
+
 .navbar a:hover:before, .navbar li:hover > a:before, .navbar .active:before {
   visibility: visible;
   width: 25px;
@@ -193,7 +191,7 @@ Titulo pantalla principal
 
   font-size: 150px;
   color:#a09e9c;
-  margin-top: 100px;
+  margin-top: 230px;
   line-height: 1;
   font-family: "Tangerine", sans-serif;
   text-shadow: 8px 0.1px #d2188e;
