--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
 
-<app-nab-var></app-nab-var>
-<div class="container m-5">
-  <router-outlet></router-outlet>
-</div>
-<app-footer></app-footer>
+<app-login></app-login>
