terminacion angular inicial

--- a/src/app/componentes/contacto/contacto.component.html
+++ b/src/app/componentes/contacto/contacto.component.html
@@ -26,8 +26,8 @@
               <div class="col-md-6 mt-4 d-flex align-items-stretch">
                   <div class="info-box">
                      <div class="social-item">
-                          <a href="https://www.bi-github.com/" target="_blank"><i class="fab fa-github"></i></a>
-                          <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                          <a href="https://github.com/Normarale" target="_blank"><i class="fab fa-github"></i></a>
+                          <a href="https://www.linkedin.com/in/norma-susana-delprato-82618340" target="_blank"><i class="fab fa-linkedin"></i></a>
                       </div>
                   </div>
               </div>
