--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ h2, h3, h4, h5, h6 {
 # componentes General
 --------------------------------------------------------------*/
 
-#about, #estudios, #experiencia, #contacto, #login {
+#about, #estudios, #experiencia, #contacto, #proyecto {
   margin-top: 170px;
   padding-top: 60px;
   width: 100%;
