--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 
-<app-login></app-login>
+<app-nab-var></app-nab-var>
+<div class="container m-5">
+  <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
