--- a/src/app/componentes/acerca/acerca.component.html
+++ b/src/app/componentes/acerca/acerca.component.html
@@ -6,11 +6,10 @@
 
     <!--  Sobre mí -->
 
-
         <div class="about-me container">
 
                 <div class="section-title">
-                    <h2>A cerca de mi</h2>
+                    <h2>A cerca de mi & Skills</h2>
 
                 </div>
 
@@ -23,12 +22,11 @@
                             <p class="fst-italic">
                                 Ingeniera y Analista en Sistemas de Información .
                             </p>
-                            <div class="row">
+                            <div class="row"><br>
                                     <div class="col-lg-6">
                                             <ul>
                                                 <li><i class="fas fa-chevron-right"></i> <strong>Cumpleaños:</strong> <span>24 de Enero</span></li>
                                                 <li><i class="fas fa-chevron-right"></i> <strong>Intereses:</strong> <span>Diseño, desarrollo, análisis</span></li>
-                                                <li><i class="fas fa-chevron-right"></i> <strong>Teléfono:</strong> <span>+549 3524-411252</span></li>
                                                 <li><i class="fas fa-chevron-right"></i> <strong>Localidad:</strong> <span>La Para, Córdoba -Argentina-</span></li>
                                             </ul>
                                     </div>
@@ -37,12 +35,14 @@
                                                 <li><i class="fas fa-chevron-right"></i> <strong>Edad:</strong> <span>46</span></li>
                                                 <li><i class="fas fa-chevron-right"></i> <strong>Estudios:</strong> <span>Universitarios</span></li>
                                                 <li><i class="fas fa-chevron-right"></i> <strong>Email:</strong> <span>normadelprato@gmail.com</span></li>
-                                                <li><i class="fas fa-chevron-right"></i> <strong>Trabajo:</strong> <span>Freelance</span></li>
+
                                             </ul>
                                     </div>
                             </div>
+
+
                                 <p>
-                                    Desarrolladora Web -FullStack, Ingeniera en Sistemas, con 17 años de experiencia en el rubro Mutual.
+                                    Desarrolladora Web -FullStack jr, Ingeniera en Sistemas, con 17 años de experiencia en el rubro Mutual.
                                     con amplio conocimiento en tareas administrativas, conciliaciones bancarias, relaciones con los clientes.Trabajando en equipo,
                                     y con motivación para seguir aprendiendo...
                                 </p>
@@ -50,7 +50,7 @@
                 </div>
 
         </div><!-- fin Acerca -->
-        <br>
+      <br>
 
       <!--  Skills   -->
         <div class="skills container">
@@ -78,9 +78,9 @@
                             </div>
 
                             <div class="progress">
-                                <span class="skill">JavaScript <i class="val">75%</i></span>
+                                <span class="skill">JavaScript <i class="val">65%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
 
@@ -104,21 +104,21 @@
                                 </div>
 
                                 <div class="progress">
-                                    <span class="skill">Machine Learning <i class="val">50%</i></span>
+                                    <span class="skill">Python - Ciencias de datos <i class="val">70%</i></span>
+                                    <div class="progress-bar-wrap">
+                                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+
+                                <div class="progress">
+                                    <span class="skill">R-Ciencias de datos <i class="val">50%</i></span>
                                     <div class="progress-bar-wrap">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
 
                                 <div class="progress">
-                                    <span class="skill">Python-Ciencias de datos <i class="val">75%</i></span>
-                                    <div class="progress-bar-wrap">
-                                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
-                                </div>
-
-                                <div class="progress">
-                                    <span class="skill">R-ciencias de datos <i class="val">60%</i></span>
+                                    <span class="skill">Spring Boot <i class="val">60%</i></span>
                                     <div class="progress-bar-wrap">
                                         <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
