--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -8,8 +8,8 @@
             <div class="social-links">
               <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
               <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-              <a href="https://www.bi-github.com/" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+              <a href="https://github.com/Normarale" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/norma-susana-delprato-82618340/" target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
       </div>
 
