--- a/src/app/componentes/nab-var/nab-var.component.html
+++ b/src/app/componentes/nab-var/nab-var.component.html
@@ -30,11 +30,12 @@
                     <a class="nav-link" routerLink="./experiencia" >Experiencia</a>
                   </li>
                   <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" routerLink="./contacto" >Contacto</a>
+                    <a class="nav-link" routerLink="./proyectos" >Proyectos</a>
                   </li>
                   <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" href="#" >Login</a>
+                    <a class="nav-link" routerLink="./contacto" >Contacto</a>
                   </li>
+
             </ul>
 
       </div>
